# djoser-passwordless

./: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  echo_py.py  pyproject.toml  pytest.ini  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: test-suite.yml
djoser_passwordless/: apps.py  conf.py  constants.py  email.py  models.py  readme.md  serializers.py  services.py  sms.py  urls.py  views.py
djoser_passwordless/templates/mobile/: passwordless_request.txt
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
testproject/: settings.py  urls.py
testproject/testapp/: models.py
testproject/testapp/tests/: common.py  test_passwordless_email_token_request.py  test_passwordless_mobile_token_request .py  test_token_exchange.py  utils.py
