[tool.poetry]
name = "djoser-passwordless"
version = "0.1.0"
description = "A passworldess plugin for Djoser (Django Rest Framework authentication package)"
authors = ["Sergio <smaisidoro@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "djoser_passwordless"}]

[tool.poetry.dependencies]
python = "^3.8"
djoser = "<3.0.0"
django-sms = "^0.6.0"
django-phonenumber-field = {extras = ["phonenumberslite"], version = "^7.0.2"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-django = "^4.5.2"
djet = "^0.3.0"
django = "^4.2"
coverage = "^7.2.3"
pytest-cov = "^4.0.0"
exceptiongroup = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
